<resources>
    <string name="app_name">GPA_kudaravalliv1_Calculator</string>
    <string name="course_heading">ENTER GRADES</string>
    <string name="course_1_grade">Course 1:</string>
    <string name="compute_gpa">COMPUTE</string>
    <string name="course_2_grade">Course 2:</string>
    <string name="course_3_grade">Course 3:</string>
    <string name="course_4_grade">Course 4:</string>
    <string name="course_5_grade">Course 5:</string>
    <string name="course_1_input">Enter grade for course 1</string>
    <string name="course_2_input">Enter grade for course 2</string>
    <string name="course_3_input">Enter grade for course 3</string>
    <string name="course_4_input">Enter grade for course 4</string>
    <string name="course_5_input">Enter grade for course 5</string>
    <string-array name="course_1_autofill">
        <item>Enter grade for course 1</item>
    </string-array>
    <string-array name="course_2_autofill">
        <item>Enter grade for course 2</item>
    </string-array>
    <string-array name="course_3_autofill">
        <item>Enter grade for course3</item>
    </string-array>
    <string-array name="course_4_autofill">
        <item>Enter grade for course 4</item>
    </string-array>
    <string-array name="course_5_autofill">
        <item>Enter grade for course 5</item>
    </string-array>

</resources>
