<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
   >

    <TextView
        android:id="@+id/course_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50dp"
        android:layout_marginLeft="5dp"
        android:textColor="#03A9F4"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/course_heading"/>


    <TextView
        android:id="@+id/label1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:textColor="#673AB7"
        android:textSize="30dp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:labelFor="@+id/grade1"
        android:text="@string/course_1_grade" />

    <EditText
        android:id="@+id/grade1"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textColor="#000000"
        android:inputType="numberDecimal"
        android:layout_below="@id/label1"
        android:autofillHints="@array/course_1_autofill"
        android:padding="8dp"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/label2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#BC5175"
        android:textSize="30dp"
        android:textStyle="bold"
        android:layout_below="@id/grade1"
        android:text="@string/course_2_grade"
        android:labelFor="@+id/grade2" />
    <EditText
        android:id="@+id/grade2"
        android:textColor="#000000"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:inputType="numberDecimal"
        android:layout_below="@id/label2"
        android:autofillHints="@array/course_2_autofill"
        android:padding="8dp"
        tools:ignore="LabelFor" />
    <TextView
        android:id="@+id/label3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FF5722"
        android:textSize="30dp"
        android:textStyle="bold"
        android:layout_below="@id/grade2"
        android:text="@string/course_3_grade"
        android:labelFor="@+id/grade3" />
    <EditText
        android:id="@+id/grade3"
        android:textColor="#000000"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:inputType="numberDecimal"
        android:layout_below="@id/label3"
        android:autofillHints="@array/course_3_autofill"
        android:padding="8dp"
        tools:ignore="LabelFor" />
    <TextView
        android:id="@+id/label4"
        android:layout_width="wrap_content"
        android:layout_below="@id/grade3"
        android:textColor="#F1D907"
        android:textSize="30dp"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:text="@string/course_4_grade"
        android:labelFor="@+id/grade4" />
    <EditText
        android:id="@+id/grade4"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textColor="#000000"
        android:inputType="numberDecimal"
        android:layout_below="@id/label4"
        android:autofillHints="@array/course_4_autofill"
        android:padding="8dp"
        tools:ignore="LabelFor" />
    <TextView
        android:id="@+id/label5"
        android:layout_width="wrap_content"
        android:layout_below="@id/grade4"
        android:layout_height="wrap_content"
        android:textColor="#4CAF50"
        android:textSize="30dp"
        android:textStyle="bold"
        android:text="@string/course_5_grade"
        android:labelFor="@+id/grade5" />

    <EditText
        android:id="@+id/grade5"
        android:textColor="#000000"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:inputType="numberDecimal"
        android:layout_below="@id/label5"
        android:autofillHints="@array/course_5_autofill"
        android:padding="8dp"
        tools:ignore="LabelFor" />


    <Button
        android:id="@+id/computeButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/compute_gpa"
        android:textColor="@color/white"
        android:layout_marginTop="24dp"
        android:background="@drawable/button"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/grade5"
        />

    <TextView
        android:id="@+id/gpaDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/computeButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:textSize="18sp" />

</RelativeLayout>
